<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/fragment_whitelist_top_content"
        android:layout_above="@id/fragment_whitelist_button">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/whitelist_explanation" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/choose_a_delay" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/fragment_whitelist_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/fragment_whitelist_apply_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/apply" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_marginBottom="@dimen/default_margin_top"
            android:id="@+id/fragment_whitelist_divider"/>

        <EditText
            android:id="@+id/fragment_whitelist_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:padding="8dp"
            android:importantForAutofill="no" />

        <GridView
            android:id="@+id/fragment_whitelist_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </GridView>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_whitelist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/whitelist"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>