<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:background="@drawable/blue_bg">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/skywall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160dp"
            android:text="@string/skywall"
            android:textSize="25sp"
            android:textColor="@color/white"/>

    </FrameLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="36.7dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/blue_border_rounded_corner">

        <!-- INPUT -->
        <EditText
            android:id="@+id/fragment_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fragment_login_username_icon"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            android:autofillHints="username" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/fragment_login_username_icon"
            android:layout_width="14.7dp"
            android:layout_height="10.3dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:src="@drawable/email"
            android:contentDescription="@string/username" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="12.7dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/blue_border_rounded_corner">

        <!-- INPUT -->
        <EditText
            android:id="@+id/fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fragment_login_password_icon"
            android:autofillHints="password"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingStart="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/fragment_login_password_icon"
            android:layout_width="14.7dp"
            android:layout_height="10.3dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="17dp"
            android:src="@drawable/password"
            android:contentDescription="@string/password" />

    </RelativeLayout>

    <Button
        android:id="@+id/fragment_login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="18.7dp"
        android:layout_marginRight="62dp"
        android:background="@drawable/blue_fill_rounded_corner"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textColor="#1566e0"
        android:textSize="11sp" />

</LinearLayout>
