<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/pending_changes" />

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_pending_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/pending_delay"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/default_padding_side"
            android:layout_marginEnd="@dimen/default_padding_side" />

        <TextView
            android:id="@+id/fragment_pending_delay_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="TextView"
            android:layout_toEndOf="@id/fragment_pending_delay"/>

        <Button
            android:id="@+id/fragment_pending_delay_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_padding_side"
            android:text="@string/cancel" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <GridView
        android:id="@+id/fragment_pending_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </GridView>


</LinearLayout>